<resources>
    <string name="app_name">Shopping Checker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="txt_shopping_list">Shopping list</string>
    <string name="title_cart_name">Cart name: </string>
    <string name="txt_hint_input_cart_name">Input your cart name.</string>
    <string name="txt_msg_delete_cart">Do you really want to delete this cart?</string>
    <string name="key_cartId">cartId</string>
    <string name="action_create">Create</string>
    <string name="action_modify">Modify</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="isPurchased">isPurchased</string>
    <string name="cartItemId">cartItemId</string>
    <string name="txt_empty_item">There is no item.</string>
    <string name="txt_input_item">Input your item to add.</string>
    <string name="toast_no_input_item">Input your item.</string>
    <string name="toast_no_delete_item">Please, choose items to delete.</string>
    <string name="toast_deleted_item">Items was deleted!</string>
    <string name="toast_copied_item">Copied the item.</string>
    <string name="txt_to">To:</string>
</resources>
