<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cart_name"
            android:layout_weight="1"
            android:gravity="right"/>
        <EditText
            android:id="@+id/editCreateModifyCartText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_input_cart_name"
            android:layout_weight="5"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonCreateModifyCart"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/action_create"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:background="@xml/button_selector"
                android:textAllCaps="false"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonCloseCreateCart"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/action_close"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:background="@xml/button_selector"
                android:textAllCaps="false"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
