<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/common_popup_padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cart_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This is cart name space."/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">
        <EditText
            android:id="@+id/editItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_item"
            android:textSize="20dp"
            android:layout_weight="5"/>
        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@xml/button_add_item_selector"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_between_layout_top_margin"
        android:weightSum="6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_to"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAppBar"
        android:layout_marginTop="@dimen/common_between_layout_top_margin"
        android:layout_marginBottom="@dimen/common_between_layout_bottom_margin"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonCreateModifyCart"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/action_copy"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:background="@xml/button_selector"
                android:textAllCaps="false"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonCloseCreateCart"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/action_close"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:background="@xml/button_selector"
                android:textAllCaps="false"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
