<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_msg_delete_cart"
        android:gravity="center_horizontal"
        android:padding="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAppBar"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonDeleteConfirmCart"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/action_delete"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:background="@xml/button_selector"
                android:textAllCaps="false"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonCloseDeleteCart"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/action_close"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:background="@xml/button_selector"
                android:textAllCaps="false"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
